# logseq-book-cli

./: CHANGELOG.md  LICENSE  README.md  logseq-book-cli.cabal
.github/workflows/: haskell.yml
